[workspace]
members = [
	"runtime/",
	"pallets/parachain-info",
	"pallets/token-dealer",
	"pallets/template",
	"node/",
]
exclude = ["vendor"]

[profile.release]
panic = 'unwind'

[patch.crates-io]
ethereum = { path = "vendor/ethereum" }
pallet-evm = { path = "vendor/frontier/vendor/substrate/frame/evm" }