[package]
name = 'moonbase-runtime'
description = 'Moonbase Parachain Collator Runtime'
homepage = 'https://moonbeam.network'
license = 'Unlicense'
version = '0.1.0'
authors = ["PureStake"]
edition = '2018'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
zeroize = { version = "1.0.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false, optional = true }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
parking_lot = { version = "0.10.0", optional = true }
rand = { version = "0.7.3", optional = true, features = ["small_rng"] }
regex = { version = "1.3.1", optional = true }
base58 = { version = "0.1.0", optional = true }
log = "0.4.8"
sha3 = { version = "0.8", default-features = false }


ed25519-dalek = { version = "1.0.0-pre.3", default-features = false, features = ["u64_backend", "alloc"], optional = true }
blake2-rfc = { version = "0.2.18", default-features = false, optional = true }
tiny-keccak = { version = "2.0.1", features = ["keccak"], optional = true }
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false, optional = true }
sha2 = { version = "0.8.0", default-features = false, optional = true }
hex = { version = "0.4", default-features = false, optional = true }
twox-hash = { version = "1.5.0", default-features = false, optional = true }
libsecp256k1 = { version = "0.3.2", default-features = false, features = ["hmac"], optional = true }
merlin = { version = "2.0", default-features = false, optional = true }

parachain-info = { path = "../pallets/parachain-info", default-features = false}
template = { package = "pallet-template", path = "../pallets/template", version = "2.0.0-rc5", default-features = false}

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frontier-rpc-primitives = { default-features = false, path = "../vendor/frontier/rpc/primitives" }
frame-ethereum = { version = "0.1.0", default-features = false, package = "pallet-ethereum", path = "../vendor/frontier/frame/ethereum" }
frame-evm = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch", package = "pallet-evm" }

sp-runtime-interface = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

# Cumulus dependencies
cumulus-runtime = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c' }
cumulus-parachain-upgrade = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c' }
cumulus-upward-message = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c' }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c' }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"cumulus-runtime/std",
	"cumulus-parachain-upgrade/std",
	"cumulus-upward-message/std",
	"cumulus-primitives/std",
	"template/std",
	"frame-ethereum/std",
	"frame-evm/std",
	"frontier-rpc-primitives/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"sha3/std",
	"lazy_static",
	"parking_lot",
	"rand",
	"regex",
	"base58",
	"full_crypto",
]

full_crypto = [
	"ed25519-dalek",
	"blake2-rfc",
	"tiny-keccak",
	"schnorrkel",
	"hex",
	"sha2",
	"twox-hash",
	"libsecp256k1",
	"sp-runtime-interface/disable_target_static_assertions",
	"merlin",
]


# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = [
	"cumulus-upward-message/runtime-wasm",
]
