[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "cumulus-token-dealer"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-rococo-branch" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-rococo-branch" }

# Cumulus dependencies
cumulus-upward-message = { git = "https://github.com/crystalin/cumulus",  default-features = false, branch = "crystalin-rococo-branch" }
cumulus-primitives = { git = "https://github.com/crystalin/cumulus",  default-features = false, branch = "crystalin-rococo-branch" }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "cumulus-upward-message/std",
    "cumulus-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "polkadot-parachain/std",
]
